force-app/main/default/objects/ClassService__c/ClassService__c.object-meta.xml
<CustomObject>
    <description>교육시스템신청레코드저장 오브젝트
해당레코드의 적합성판단후 부가서비스내역으로 삽입</description>
    <label>교육서비스신청</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>