force-app/main/default/objects/ClassService__c/fields/ApplicantsNumber__c.field-meta.xml
<CustomField>
    <fullName>ApplicantsNumber__c</fullName>
    <label>ApplicantsNumber</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>