force-app/main/default/objects/ClassService__c/fields/CustomerAgeGroup__c.field-meta.xml
<CustomField>
    <fullName>CustomerAgeGroup__c</fullName>
    <label>CustomerAgeGroup</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3세이하</fullName>
            </value>
            <value>
                <fullName>4세</fullName>
            </value>
            <value>
                <fullName>5세</fullName>
            </value>
            <value>
                <fullName>6세</fullName>
            </value>
            <value>
                <fullName>7세</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>