force-app/main/default/objects/ClassService__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Manager</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>