force-app/main/default/objects/ClassService__c/fields/MDMCode__c.field-meta.xml
<CustomField>
    <fullName>MDMCode__c</fullName>
    <label>MDMCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>