force-app/main/default/objects/ClassService__c/fields/ServiceContent__c.field-meta.xml
<CustomField>
    <fullName>ServiceContent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>부가서비스 컨텐츠</label>
    <referenceTo>ServiceContents__c</referenceTo>
    <relationshipName>ClassService</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>