force-app/main/default/objects/ClassService__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H</fullName>
                <label>신청접수</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>신청완료</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>신청거부</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>