force-app/main/default/objects/ClassService__c/fields/TargetGroup__c.field-meta.xml
<CustomField>
    <fullName>TargetGroup__c</fullName>
    <label>TargetGroup</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>원장</fullName>
            </value>
            <value>
                <fullName>어린이</fullName>
            </value>
            <value>
                <fullName>교직원</fullName>
            </value>
            <value>
                <fullName>학부모</fullName>
            </value>
            <value>
                <fullName>학부모참여</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
            <value>
                <fullName>실버</fullName>
            </value>
            <value>
                <fullName>보육원성인</fullName>
            </value>
            <value>
                <fullName>보육원</fullName>
            </value>
            <value>
                <fullName>지적장애인</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>